--- a/RE_forscan_vs_savvycan.ipynb
+++ b/RE_forscan_vs_savvycan.ipynb
@@ -721,7 +721,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "data.to_csv()"
+   ]
   },
   {
    "cell_type": "code",
